# vrl-python

./: .bumpversion.toml  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  GITHUB_ACTIONS_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  SYNTAX_DIAGNOSTICS.md  TYPE_HINTS.md  pyproject.toml  quickstart.sh  requirements-dev.txt  ruff.toml  test_quick.py  test_type_hints.py
.github/: CI_FIXES.md  ENVIRONMENT_NAMES.md  ENVIRONMENT_SETUP.md  README.md  RELEASE_GUIDE.md  SETUP_CHECKLIST.md
.github/workflows/: ci.yml  publish.yml  test.yml
.windsurf/workflows/: arch.md
docs/: DEVELOPMENT.md  GITHUB_ACTIONS_SUMMARY.md  RUST_PYTHON_VERSION_SYNC.md  TYPE_HINTS.md  UPGRADE_SUMMARY.md  VERSION_MANAGEMENT.md  VERSION_QUICK_REFERENCE.md
examples/: basic_usage.py
python/vrl_python/: __init__.py  _vrl_python.pyi
src/: error.rs  lib.rs  runtime.rs  types.rs
tests/: test_basic.py
