[package]
name = "vrl-python"
version = "0.1.0"
edition = "2021"
authors = ["JQQ <jqq1716@gmail.com>"]
description = "Python bindings for Vector Remap Language (VRL)"
license = "MIT"
repository = "https://github.com/yourusername/vrl-python"
keywords = ["vrl", "vector", "python", "pyo3"]
categories = ["api-bindings"]

[lib]
name = "vrl_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py38"] }
serde_json = "1.0"
# 必须与 VRL 使用的版本一致 / Must match VRL's version
ordered-float = "4.6"

# VRL dependencies - 参考Vector项目的依赖方式
vrl = { git = "https://github.com/vectordotdev/vrl.git", branch = "main", features = ["cli"] }

[dev-dependencies]
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
