[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vrl-python"
version = "0.1.0"
description = "Python bindings for Vector Remap Language (VRL)"
authors = [
    {name = "JQQ", email = "jqq1716@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["vrl", "vector", "data-processing", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/yourusername/vrl-python"
Repository = "https://github.com/yourusername/vrl-python"
Documentation = "https://github.com/yourusername/vrl-python#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "vrl_python._vrl_python"
# 包含类型提示文件 / Include type hint files
include = ["python/vrl_python/*.pyi", "python/vrl_python/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
    "ruff>=0.13.3",
]
